# ChangeLog for app-laptop/tlp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Use global "bluetooth" USE flag for pulling in optional bluetooth
  dependencies.

  14 Nov 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild:
  Depend on x86_energy_perf_policy, provided by either
  sys-power/linux-x86-power-tools or sys-apps/linux-misc-apps.

*tlp-0.6-r1 (09 Oct 2014)
  09 Oct 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.6-r1.ebuild,
  -tlp-0.6.ebuild, tlp-9999.ebuild
  Fix installation of openrc script, github issue #6 (dbordak)

*tlp-0.6 (07 Oct 2014)

  07 Oct 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.6.ebuild, tlp-9999.ebuild
  Latest upstream release.
  Added runtime dep on sys-apps/util-linux (though part of the system set).

  24 Sep 2014; Andre Erdmann <dywi@mailerd.de> tlp-9999.ebuild
  - use $MY_CONFFILE in pkg_preinst()
  - use TLP_WITH_SYSTEMD

  24 Sep 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.5-r2.ebuild
  - don't hardcode /etc/tlp.conf in pkg_preinst(), use $MY_CONFFILE instead
  - "fix" comment regarding RESTRICT=mirror

*tlp-9999 (15 Sep 2014)
*tlp-0.5-r2 (15 Sep 2014)

  15 Sep 2014; Andre Erdmann <dywi@mailerd.de> +tlp-0.5-r2.ebuild,
  +tlp-9999.ebuild, +files/pm-blacklist.0 +files/tlp-init.openrc, metadata.xml
  Added a live ebuild and another revision for 0.5:
  - both: wrt to github issue #5, added a "deprecated" USE flag,
    which controls whether thinkpad-radiosw gets installed or not.
    The ebuild does no longer print a warning about ACPI_PROC_EVENT if this
    flag is disabled. acpid is a USE-dependent runtime dep now.
  - both: use pm-blacklist/init script from FILESDIR
  - 0.5-r2: drop git requirement, get upstream source tarball from github
  - 0.5-r2: changed SRC_URI for gentoo-additions=>gentoo-patches

  04 Aug 2014; Andre Erdmann <dywi@mailerd.de> tlp-0.5-r1.ebuild
  Try to copy/hardlink /etc/conf.d/tlp->/etc/tlp.conf during